# tokiodoshi

./: .gitignore  CREDITS.md  README.md  package-lock.json  package.json  vitest.config.ts
docs/: prototype.html  requirements.md
docs/spec/backend/: design.md  requirements.md  tasks.md
docs/spec/frontend/: design.md  requirements.md  tasks.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/commands/: audio.rs  history.rs  mod.rs  settings.rs  timer.rs
src-tauri/src/core/: audio_service.rs  mod.rs  persistence.rs  ticker.rs  timer_machine.rs
src-tauri/src/models/: mod.rs  session.rs  settings.rs  timer_state.rs
src/lib/components/: Chrome.svelte  EditableDuration.svelte  ShishiOdoshi.svelte  ShishiOdoshi.svelte.test.ts  TimerControls.svelte  TimerControls.svelte.test.ts  TimerDisplay.svelte
src/lib/components/settings/: DurationInput.svelte  MinutesInput.svelte  Row.svelte  SegmentedControl.svelte  Slider.svelte  Toggle.svelte
src/lib/ipc/: audio.test.ts  audio.ts  events.test.ts  events.ts  history.test.ts  history.ts  settings.test.ts  settings.ts  timer.test.ts  timer.ts
src/lib/stores/: settings.svelte.test.ts  settings.svelte.ts  timer.svelte.ts
src/lib/types/: index.ts
src/lib/utils/: duration.test.ts  duration.ts  easing.test.ts  easing.ts  format.test.ts  format.ts  history.test.ts  history.ts  theme.test.ts  theme.ts  tween.test.ts  tween.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/history/: +page.svelte
src/routes/settings/: +page.svelte
tmp/: BACKEND_HANDOFF.md
