[package]
name = "tokiodoshi"
version = "0.1.0"
description = "ししおどしのリズムで時を落とすポモドーロタイマー"
authors = ["Naoya Otsuka"]
edition = "2021"

[lib]
name = "tokiodoshi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri         = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-sql   = { version = "2", features = ["sqlite"] }

# 音再生
rodio = { version = "0.20", default-features = false, features = ["mp3", "symphonia-mp3"] }

# 非同期ランタイム
tokio = { version = "1", features = ["full"] }

# シリアライズ
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# エラー
thiserror = "1"

# 日時
chrono = { version = "0.4", features = ["serde"] }

# ログ
log         = "0.4"
env_logger  = "0.11"

[dev-dependencies]
tokio-test = "0.4"
